# BA-AD

./: .gitignore  Cargo.toml  README.md
.github/docs/: CHANGELOG.md
.github/workflows/: build_core.yml
baad/: __main__.py
crates/baad/: Cargo.toml  structure.md
crates/baad-cli/: Cargo.toml
crates/baad-cli/src/: args.rs  main.rs  parse.rs
crates/baad-dm/: Cargo.toml  LICENSE
crates/baad-dm/examples/: testing.rs
crates/baad-dm/src/: error.rs  lib.rs
crates/baad-dm/src/client/: config.rs  http.rs  mod.rs
crates/baad-dm/src/download/: hash.rs  item.rs  mod.rs  summary.rs
crates/baad-dm/src/downloader/: config.rs  core.rs  mod.rs
crates/baad-dm/src/progress/: display.rs  mod.rs  style.rs
crates/baad-dm/src/zip/: extractor.rs  mod.rs  types.rs
crates/baad-utils/: Cargo.toml
crates/baad-utils/src/: async_writer.rs  config.rs  error.rs  file.rs  formatter.rs  json.rs  lib.rs  network.rs  utils.rs
crates/baad/src/: config.rs  error.rs  lib.rs  types.rs
crates/baad/src/apk/: extract.rs  fetch.rs
crates/baad/src/catalog/: fetch.rs  mod.rs  parse.rs
crates/baad/src/catalog/region/: japan.rs  mod.rs
crates/baad/src/catalog/strategy/: asset.rs  media.rs  mod.rs  table.rs
crates/baad/src/download/: downloader.rs  filter.rs
crates/baad/src/helpers/: error.rs  mod.rs
crates/baad/src/utils/: json.rs  mod.rs
