[workspace]
members = [
    "crates/baad",
    "crates/baad-cli",
    "crates/baad-utils",
]
resolver = "2"

[workspace.package]
version = "3.0.0"
edition = "2024"
authors = ["Zinth"]

[workspace.dependencies]
tokio = { version = "1.47.1", features = ["full"] }
eyre = "0.6.12"
thiserror = "2.0.16"

baad = { path = "crates/baad" }
baad-utils = { path = "crates/baad-utils" }
